# banana-ripeness-classification

./: .gitattributes  .pre-commit-config.yaml  README.md  commands.py  main.py  pyproject.toml
.dvc/: config
banana_ripeness_classification/: cache_features.py  cached_dataset.py  model_cached.py  train_cached.py
configs/: config.yaml
configs/mlflow/: default.yaml
configs/model/: default.yaml
configs/postprocessing/: default.yaml
configs/preprocessing/: default.yaml
configs/train/: default.yaml
data/: test.dvc  train.dvc  valid.dvc
